syntax = "proto3";

message Request {
    uint32 action = 1;
    string target = 2;
    uint32 academic_code = 3;
    string course_code = 4;
    uint32 academic_year = 5;
    uint32 academic_semester = 6;
    float value = 7;
}

message Response {
    uint32 status = 3;
    uint32 error_code = 4;
    string error_message = 5;
    repeated uint32 academic_code = 6;
    repeated string academic_name = 7;
}